--- a/notebooks/super_awesome_EDA.ipynb
+++ b/notebooks/super_awesome_EDA.ipynb
@@ -12,7 +12,9 @@
    "cell_type": "markdown",
    "id": "ac12960f",
    "metadata": {},
-   "source": []
+   "source": [
+    "This notebook will be used to explore our data and present them "
+   ]
   },
   {
    "cell_type": "code",
