--- a/hazard_zone_(test)/data_collection.ipynb
+++ b/hazard_zone_(test)/data_collection.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "id": "736ebdbd",
    "metadata": {},
    "outputs": [],
@@ -68,10 +68,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4ca96963",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.basketball-reference.com/leagues/NBA_2016_per_game.html\n",
+      "https://www.basketball-reference.com/leagues/NBA_2017_per_game.html\n",
+      "https://www.basketball-reference.com/leagues/NBA_2018_per_game.html\n",
+      "https://www.basketball-reference.com/leagues/NBA_2019_per_game.html\n",
+      "https://www.basketball-reference.com/leagues/NBA_2020_per_game.html\n",
+      "https://www.basketball-reference.com/leagues/NBA_2021_per_game.html\n",
+      "https://www.basketball-reference.com/leagues/NBA_2022_per_game.html\n",
+      "https://www.basketball-reference.com/leagues/NBA_2023_per_game.html\n",
+      "https://www.basketball-reference.com/leagues/NBA_2024_per_game.html\n"
+     ]
+    }
+   ],
    "source": [
     "years = ['2016', '2017', '2018', '2019', '2020', '2021', '2022', '2023', '2024']\n",
     "str = 'https://www.basketball-reference.com/leagues/NBA_{}_per_game.html'\n",
@@ -84,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "id": "3607c3b1",
    "metadata": {},
    "outputs": [
@@ -283,7 +299,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "id": "628ea9f5",
    "metadata": {},
    "outputs": [],
@@ -349,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 5,
    "id": "d421ec04",
    "metadata": {},
    "outputs": [
@@ -399,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 6,
    "id": "6021bed2",
    "metadata": {},
    "outputs": [],
@@ -432,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 7,
    "id": "16d32f0e",
    "metadata": {},
    "outputs": [
@@ -455,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b6070332",
    "metadata": {},
    "outputs": [],
@@ -474,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "id": "7abe046c",
    "metadata": {},
    "outputs": [],
@@ -488,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 10,
    "id": "18b6b9f6",
    "metadata": {},
    "outputs": [],
@@ -523,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "91327ff3",
    "metadata": {},
    "outputs": [
@@ -585,7 +601,7 @@
        "      <td>3.316667</td>\n",
        "      <td>0.316667</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.416667</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.316667</td>\n",
        "      <td>0.316667</td>\n",
@@ -605,8 +621,8 @@
        "        Rk          Player   Age Team Pos     Awards  G  GS        MP  \\\n",
        "543  544.0  Filip Petrušev  23.0  2TM   C  No awards  6   0  3.316667   \n",
        "\n",
-       "           FG  ...  FT%  ORB       DRB       TRB  AST  STL  BLK  TOV  \\\n",
-       "543  0.316667  ...  NaN  0.0  0.316667  0.316667  0.0  0.0  0.0  0.0   \n",
+       "           FG  ...       FT%  ORB       DRB       TRB  AST  STL  BLK  TOV  \\\n",
+       "543  0.316667  ...  0.416667  0.0  0.316667  0.316667  0.0  0.0  0.0  0.0   \n",
        "\n",
        "           PF  PTS  \n",
        "543  0.316667  1.0  \n",
@@ -614,7 +630,7 @@
        "[1 rows x 31 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
