--- a/hazard_zone_(test)/data_collection.ipynb
+++ b/hazard_zone_(test)/data_collection.ipynb
@@ -17,11 +17,11 @@
     "- conda activate software\n",
     "- pip install ipykernel #VS code kernel library\n",
     "- pip install pandas\n",
-    "- pip install tqdm\n",
-    "- pip install requests\n",
-    "- pip install beautifulsoup4\n",
+    "- pip install tqdm///\n",
+    "- pip install requests///\n",
+    "- pip install beautifulsoup4///\n",
     "- pip install matplotlib\n",
-    "- pip install seaborn\n",
+    "- pip install seaborn///\n",
     "- pip install lxml"
    ]
   },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "736ebdbd",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Set up path between folder to call our functions \n",
+    "# Set up path between folder to call our functions\n",
     "import sys\n",
     "sys.path.append('..')\n",
     "sys.path.append('../src')\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3607c3b1",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
     "r = pd.read_html(url, header = 0)\n",
     "\n",
     "# This request output a list of dataframe read from the url, let's select the correct one :\n",
-    "# r[0] => regular season /// r[1] => playoffs\n",
+    "# r[0] => Regular Season /// r[1] => playoffs\n",
     "df = r[0]\n",
     "df.head()"
    ]
@@ -328,7 +328,7 @@
    "id": "0aec3e16",
    "metadata": {},
    "source": [
-    "### Small cleaning :"
+    "### 2.1°/ Small cleaning :"
    ]
   },
   {
@@ -360,7 +360,7 @@
    "id": "ceb6d51e",
    "metadata": {},
    "source": [
-    "### Missing values :"
+    "### 2.2°/ Missing values :"
    ]
   },
   {
@@ -415,15 +415,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6021bed2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Truth be told, there is no way to recover those missing data\n",
+    "# Truth be told, the NaN\n",
     "# So let's just set them up to 0, the ranking argument is the points scored 'PTS', so it shouldn't be a problem for our futur uses. \n",
     "# missing.index => ctrl + c & ctrl + v\n",
     "df[['FG%', '3P%', '2P%', 'eFG%', 'FT%']] = df[['FG%', '3P%', '2P%', 'eFG%', 'FT%']].fillna(0.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fc7b991",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean = df"
    ]
   },
   {
@@ -431,7 +441,7 @@
    "id": "7a2517ff",
    "metadata": {},
    "source": [
-    "### Player switching team problem :"
+    "### 2.3°/ Player switching team problem :"
    ]
   },
   {
