EDA rapido 2020 viva el LLM

--- a/hazard_zone_(test)/data_collection.ipynb
+++ b/hazard_zone_(test)/data_collection.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "736ebdbd",
    "metadata": {},
    "outputs": [],
@@ -52,16 +52,16 @@
     "\n",
     "# Data visualization\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "#import seaborn as sns\n",
     "\n",
     "# Set up path between folder to call our functions\n",
     "import sys\n",
-    "sys.path.append('..')\n",
-    "sys.path.append('../src')\n",
-    "sys.path.append('../datasets')\n",
+    "sys.path.append('.')\n",
+    "sys.path.append('./src')\n",
+    "sys.path.append('./datasets')\n",
     "\n",
     "# Code aesthetic\n",
-    "import tqdm\n",
+    "#import tqdm\n",
     "import warnings\n",
     "\n",
     "warnings.filterwarnings('ignore')"
