Merry christmas you all (+ app first overview)

--- a/hazard_zone_(test)/data_collection.ipynb
+++ b/hazard_zone_(test)/data_collection.ipynb
@@ -18,8 +18,6 @@
     "- pip install ipykernel #VS code kernel library\n",
     "- pip install pandas\n",
     "- pip install tqdm\n",
-    "- pip install requests\n",
-    "- pip install beautifulsoup4\n",
     "- pip install matplotlib\n",
     "- pip install seaborn\n",
     "- pip install lxml"
@@ -35,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "736ebdbd",
    "metadata": {},
    "outputs": [],
@@ -58,7 +56,6 @@
     "import sys\n",
     "sys.path.append('.')\n",
     "sys.path.append('./src')\n",
-    "sys.path.append('./datasets')\n",
     "\n",
     "# Code aesthetic\n",
     "#import tqdm\n",
@@ -69,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4ca96963",
    "metadata": {},
    "outputs": [
@@ -144,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3607c3b1",
    "metadata": {},
    "outputs": [
@@ -343,7 +340,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "628ea9f5",
    "metadata": {},
    "outputs": [
@@ -419,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d421ec04",
    "metadata": {},
    "outputs": [
@@ -513,6 +510,17 @@
     "\n",
     "#special treatment for eFG%:\n",
     "df['eFG%'] = round(((df['PTS']-df['FT'])/2)/df['FGA'],3).fillna(0) #bc i cannot find how the calcul was made on the website so i use mine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7a0bca5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for k, v in list(zip(df.dtypes.index, df.dtypes)):\n",
+    "#    print(f\"'{k}' : '{v}',\")"
    ]
   },
   {
