app almost finished

--- a/repo_tree.ipynb
+++ b/repo_tree.ipynb
@@ -11,8 +11,10 @@
      "output_type": "stream",
      "text": [
       "├── .gitignore\n",
+      "├── Dockerfile\n",
       "├── README.md\n",
       "├── config.py\n",
+      "├── discussion_entre_copines.txt\n",
       "├── project_M2_software_2025-2026.pdf\n",
       "├── repo_tree.ipynb\n",
       "├── requirements.txt\n",
@@ -20,13 +22,18 @@
       "│   └── streamlit_app.py\n",
       "├── datasets\n",
       "│   ├── processed\n",
+      "│   │   └── player_stats_2015-2025.csv\n",
       "│   └── raw\n",
       "├── hazard_zone_(test)\n",
+      "│   ├── app_test.ipynb\n",
       "│   └── data_collection.ipynb\n",
       "├── notebooks\n",
       "│   └── super_awesome_EDA.ipynb\n",
       "└── src\n",
-      "    └── prepare_data.py\n"
+      "    ├── __init__.py\n",
+      "    ├── download_data.py\n",
+      "    ├── download_raw_data.py\n",
+      "    └── function.py\n"
      ]
     }
    ],
