Dockerfile + small code review/cleaning

--- a/hazard_zone_(test)/app_test.ipynb
+++ b/hazard_zone_(test)/app_test.ipynb
@@ -43,7 +43,13 @@
     "\n",
     "# Custom libraries\n",
     "import config as c\n",
-    "import function as f"
+    "import function as f\n",
+    "\n",
+    "# Code aesthetic\n",
+    "#import tqdm\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
