--- a/repo_tree.ipynb
+++ b/repo_tree.ipynb
@@ -14,16 +14,14 @@
       "├── Dockerfile\n",
       "├── README.md\n",
       "├── config.py\n",
-      "├── discussion_entre_copines.txt\n",
       "├── project_M2_software_2025-2026.pdf\n",
       "├── repo_tree.ipynb\n",
       "├── requirements.txt\n",
       "├── app\n",
-      "│   └── streamlit_app.py\n",
+      "│   └── app.py\n",
       "├── datasets\n",
-      "│   ├── processed\n",
-      "│   │   └── player_stats_2015-2025.csv\n",
-      "│   └── raw\n",
+      "│   └── processed\n",
+      "│       └── player_stats_2015-2026.csv\n",
       "├── hazard_zone_(test)\n",
       "│   ├── app_test.ipynb\n",
       "│   └── data_collection.ipynb\n",
@@ -44,10 +42,10 @@
     "\n",
     "def print_tree(startpath, prefix=\"\"):\n",
     "    \"\"\"\n",
-    "    Quick function to print our repositorie tree\n",
-    "    <3 ChatGPT for this one\n",
-    "    (`tree -I \".git|__pycache__\"` doesn't work on my terminal, I guess window is at cause)\n",
+    "    Function to print our repositorie tree\n",
     "    \"\"\"\n",
+    "    #<3 ChatGPT for this one\n",
+    "    #(`tree -I \".git|__pycache__\"` doesn't work on my terminal, I guess window is at cause)\n",
     "    \n",
     "    # List all items except ignored ones\n",
     "    items = [i for i in os.listdir(startpath) if i not in IGNORE]\n",
@@ -68,7 +66,7 @@
     "            print_tree(path, prefix + extension)\n",
     "\n",
     "# Usage: replace with your local repo path\n",
-    "print_tree(\"my/path/that/contain/personal/informations/so/I/hided/it\")\n"
+    "print_tree(\"my/path/that/contain/personal/informations/so/I/hided/it\")"
    ]
   }
  ],
